--- a/login/login.html
+++ b/login/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Raleway"
   rel="stylesheet">
-  <link rel="stylesheet" href="/form_style.css">
+  <link rel="stylesheet" href="/login/form_style.css">
   <title>Form styling</title>
 </head>
 <body>
